web-infras/parser/tests/fixtures/babel/core/uncategorised/522/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (1,66)
1|"use strict";function foo(){"use strict";}function bar(){var v = 015}
 |                                                                ^
